object -> userItem refactor

--- a/src/views/partials/header-loggedin.html
+++ b/src/views/partials/header-loggedin.html
@@ -2,9 +2,9 @@
 <nav class="main-nav">
 	<ul class="main-nav-list list-inline">
 		<li class="main-nav-item">
-			<a class="main-nav-link" ui-sref="loggedin.objects">Objects</a>
+			<a class="main-nav-link" ui-sref="loggedin.userItems">UserItems</a>
 		<li class="main-nav-item">
-			<a class="main-nav-link" ui-sref="loggedin.newObject">New</a>
+			<a class="main-nav-link" ui-sref="loggedin.newUserItem">New UserItem</a>
 		</li>
         <li class="main-nav-item">
             <a class="main-nav-link" ng-click="logout()">Sign Out</a>
