--- a/src/views/home-loggedout.html
+++ b/src/views/home-loggedout.html
@@ -34,10 +34,17 @@
 				<h3>Or Sign Up</h3>
 				<form name="loginForm" ng-submit="signup(credentials)" novalidate role="form">
 					<div class="form-group">
+						<label for="signup-email">Username:</label>
+						<input type="text"
+						       id="signup-username"
+						       ng-model="signup.username"
+						       class="form-control">
+					</div>
+					<div class="form-group">
 						<label for="signup-email">Email:</label>
 						<input type="text"
 						       id="signup-email"
-						       ng-model="signup.username"
+						       ng-model="signup.email"
 						       class="form-control">
 					</div>
 					<div class="form-group">
